--- a/styles.css
+++ b/styles.css
@@ -10,3 +10,87 @@
  * governing permissions and limitations under the License.
  */
 
+body {
+    font-family: NeueHaasUnica Regular,Helvetica,Arial,sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+header {
+    height: 160px;
+}
+
+header img {
+    height: 40px;
+}
+
+header .nav-top {
+    height: 50px;
+    display: flex;
+    background: #071d49;
+    color: white;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 20px;
+}
+
+header ol {
+    list-style: none;
+    display: flex;
+}
+
+header li {
+    margin: 20px;
+}
+
+header .nav-bottom {
+    height: 110px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px;
+}
+
+a:any-link {
+    text-decoration: none;
+    color: currentColor;
+}
+
+main .hero {
+    color: white;
+    text-align: center;
+    background-position: center center;
+    background-size: cover;
+    padding: 30px;
+    min-height: 400px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+}
+
+main .hero a {
+    border: 1px solid white;
+    padding: 20px;
+    margin-top: 50px;
+    display: inline-block;
+}
+
+main .hero a:hover {
+    background-color: white;
+    color: #071d49;
+}
+
+.hidden {
+    display: none;
+}
+
+main .section-wrapper >  div {
+    max-width: 1000px;
+    padding: 20px;
+    margin: auto;
+}
+
+main img {
+    max-width: 100%;
+}
